--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -171,6 +171,11 @@ link:04monads.pdf[Слайды про монады]
 
 link:05gadt.pdf[Слайды про GADT]
 
+[[week11]]
+Неделя 10 (14 ноября)
+---------------------
+
+link:06many.pdf[Слайды про разные темы]
 
 
 [[questions]]
