--- a/papers/puzzles2019/figures/ssa-elim.tex
+++ b/papers/puzzles2019/figures/ssa-elim.tex
@@ -50,7 +50,7 @@
 \draw (364.38,99) node  [align=left] {{\fontfamily{pcr}\selectfont if (b3>N)}};
 
 \draw (100,140) node  [align=left] {\textcolor{teal}{SSA}};
-\draw (364,140) node  [align=left] {\textcolor{red}{Not SSA}};
+\draw (364,140) node  [align=left] {\textcolor{red}{Не SSA}};
 
 
 \end{tikzpicture}
