--- a/papers/puzzles2019/figures/ssa-ssi-example.tex
+++ b/papers/puzzles2019/figures/ssa-ssi-example.tex
@@ -105,9 +105,9 @@
 % Text Node
 \draw (313.25,29) node  [align=left] {{\tt b1=d+4}};
 % Text Node
-\draw (81,241) node  [align=left] {\textcolor{red}{Not SSA and not SSI}};
+\draw (81,241) node  [align=left] {\textcolor{red}{Не SSA и не SSI}};
 % Text Node
-\draw (269,241) node  [align=left] {\textcolor{teal}{SSA} \textcolor{red}{but not SSI}};
+\draw (269,241) node  [align=left] {\textcolor{teal}{SSA,} \textcolor{red}{но не SSI}};
 % Text Node
 \draw (436,109.5) node  [align=left] {{\tt b3 = }$\displaystyle \varphi ${\tt (b1,b2)}\\{\tt if (b3 > 1)}\\{\tt (c1,c2)=}$\displaystyle \pi ${\tt (c)}};
 % Text Node
@@ -119,7 +119,7 @@
 % Text Node
 \draw (483.25,29) node  [align=left] {{\tt b1=d+4}};
 % Text Node
-\draw (439,241) node  [align=left] {\textcolor{teal}{SSA and SSI}};
+\draw (439,241) node  [align=left] {\textcolor{teal}{SSA и SSI}};
 
 
 \end{tikzpicture}
