--- a/papers/puzzles2019/figures/ssa2ssi.tex
+++ b/papers/puzzles2019/figures/ssa2ssi.tex
@@ -49,6 +49,6 @@
 % Text Node
 \draw (393.25,110) node  [align=left] {{\tt ...=c2*2}};
 
-\draw (90,160) node  [align=left] {\textcolor{red}{not SSI}};
+\draw (90,160) node  [align=left] {\textcolor{red}{не SSI}};
 \draw (350,160) node  [align=left] {\textcolor{teal}{SSI}};
 \end{tikzpicture}
