Initial synopsis template

--- a/papers/vyser/Dissertation/dissertation.tex
+++ b/papers/vyser/Dissertation/dissertation.tex
@@ -44,12 +44,13 @@
 %\input{contents}        % Оглавление
 %\input{introduction}    % Введение
 %\input{overview}
-\input{architecture}
-\input{evaluation}
-\input{comparison}
-\input{conclusion}      % Заключение
-\input{references}      % Список литературы
-\input{lists}           % Списки таблиц и изображений (иллюстративный материал)
+%\input{architecture}
+%\input{evaluation}
+%\input{comparison}
+%\input{conclusion}      % Заключение
+\input{demo_results}
+%\input{references}      % Список литературы
+%\input{lists}           % Списки таблиц и изображений (иллюстративный материал)
 %\input{appendix}        % Приложения
 
 \end{document}
