--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -303,6 +303,12 @@ LISP известен своими встроенными макросами. П
 (https://www.cs.cmu.edu/~fp/courses/15317-f17/lectures/18-datalog.pdf[страницы 2-3]).
 Ну или поиск пути в графе (http://pages.cs.wisc.edu/~paris/cs784-s17/lectures/lecture7.pdf[страницы 1-2]).
 
+В качестве 3й и 4й задач реализуйте процедуры поиска top-down и bottom-up, а также
+приведите примеры программ, на которых одно лучше другого, и наоборот. С обоснованием
+что такое "лучше" и численными замерами-доказательствами "лучшести".
+
+NOTE: В 2020 году требовать magic set rewriting.
+
 [[nfa]]
 === NFA (Дулетов)
 
