--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -59,6 +59,12 @@ Haskell), то это нужно предварительно согласова
 Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
 Засылать готовые решения надо с помощью merge request в https://gitlab.com/Kakadu/haskell-course2019-hw[этот репозиторий].
 
+Для большинства языков в качетсве задачи №4 можно взять стандартные оптимизации языка:
+
+* dead code elimination -- выкидываение неиспользуемых переменных и объявлений
+* constant folding -- протягивание именованных констант внутрь, упрощение выражений `1+2` или `x+3-x` в `3`.
+
+
 [[lua]]
 === Lua (Цириков)
 
@@ -307,7 +313,7 @@ LISP известен своими встроенными макросами. П
 приведите примеры программ, на которых одно лучше другого, и наоборот. С обоснованием
 что такое "лучше" и численными замерами-доказательствами "лучшести".
 
-NOTE: В 2020 году требовать magic set rewriting.
+NOTE: В 2020 году требовать (http://webdam.inria.fr/Alice/pdfs/Chapter-13.pdf)[magic set rewriting].
 
 [[nfa]]
 === NFA (Дулетов)
