--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -143,39 +143,68 @@ link:01typedesign.pdf[слайды]
 link:02.pdf[Слайды про алгебру типов]
 
 [[week6]]
-Неделя 5 (10 октября)
+Неделя 6 (10 октября)
 ---------------------
 
 [[week7]]
-Неделя 6 (17 октября)
+Неделя 7 (17 октября)
 ---------------------
 
 link:03.pdf[Слайды про лямбда исчисление]
 
 [[week8]]
-Неделя 7 (24 октября)
+Неделя 8 (24 октября)
 ---------------------
 
 Продолжение про лямбда исчисление
 
 [[week9]]
-Неделя 8 (31 октября)
+Неделя 9 (31 октября)
 ---------------------
 
 link:04monads.pdf[Слайды про монады]
 
 
 [[week10]]
-Неделя 9 (07 ноября)
----------------------
+Неделя 10 (07 ноября)
+----------------------
 
 link:05gadt.pdf[Слайды про GADT]
 
 [[week11]]
-Неделя 10 (14 ноября)
+Неделя 11 (14 ноября)
 ---------------------
 
 link:06many.pdf[Слайды про разные темы]
+
+[[week12]]
+Неделя 12 (21 ноября)
+---------------------
+
+link:07free.pdf[Индексы де Брёйна и free-монада]
+
+[[week13]]
+Неделя 13 (28 ноября)
+---------------------
+
+link:08logic.pdf[ФП vs. Интуиционистская логика]
+
+[[week14]]
+Неделя 14 (05 декабря)
+----------------------
+
+link:mm-transformers-12.2019-noads.pdf[Траснформеры]
+
+[[week15]]
+Неделя 15 (12 декабря)
+----------------------
+
+Последняя по расписанию пара link:08hm.pdf[про полиморфные типы]
+
+[[week16]]
+Неделя 16 (19 декабря)
+----------------------
+
 
 
 [[questions]]
