--- a/papers/vyser/Synopsis/title.tex
+++ b/papers/vyser/Synopsis/title.tex
@@ -34,6 +34,7 @@
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 {\centering\thesisCity~--- \thesisYear\par}
 
+\begin{comment}
 \newpage
 % оборотная сторона обложки
 \thispagestyle{empty}
@@ -95,3 +96,5 @@ r
     &
     \defenseSecretaryFio
 \end{tabularx} 
+
+\end{comment}
