--- a/papers/vyser/common/data.tex
+++ b/papers/vyser/common/data.tex
@@ -13,8 +13,8 @@
 \newcommand{\thesisUdk}                % Диссертация, УДК
 {\todo{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{\MakeUppercase{Реляционное программирование в задачах компиляции функциональных языков}}
-                               {Реляционное программирование в задачах компиляции функциональных языков}}
+{\texorpdfstring{\MakeUppercase{Применение реляционного программирования в задачах компиляции функциональных языков}}
+                               {Применение реляционного программирования в задачах компиляции функциональных языков}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
 {\texorpdfstring{0.13.11}{05.13.11}}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название
