--- a/papers/vyser/common/styles.tex
+++ b/papers/vyser/common/styles.tex
@@ -11,8 +11,8 @@
     \fi
     \setmainfont{Times New Roman}
     \newfontfamily\cyrillicfont{Times New Roman}
-    \setmainfont{Comic Sans MS}
-    \newfontfamily\cyrillicfont{Comic Sans MS}
+%    \setmainfont{Comic Sans MS}
+%    \newfontfamily\cyrillicfont{Comic Sans MS}
     \setsansfont{Arial}
     \newfontfamily\cyrillicfontsf{Arial}
 \else
