--- a/papers/vyser/synopsis.tex
+++ b/papers/vyser/synopsis.tex
@@ -21,11 +21,12 @@
 
 \begin{document}
 
-%\input{Synopsis/title}        % Титульный лист
+\input{Synopsis/title}        % Титульный лист
 %\mainmatter                   % В том числе начинает нумерацию страниц арабскими цифрами с единицы
-\mainmatter*                  % Нумерация страниц не изменится, но начнётся с новой страницы
+%\mainmatter*                  % Нумерация страниц не изменится, но начнётся с новой страницы
 \input{Synopsis/content}      % Содержание автореферата
 
+\begin{comment}
 %%% Выходные сведения типографии
 \newpage\thispagestyle{empty}
 
@@ -51,5 +52,6 @@
     Типография \blank[0.5\linewidth]
 \end{center}
 \cleardoublepage
+\end{comment}
 
 \end{document}
