--- a/papers/vyser/common/characteristic.tex
+++ b/papers/vyser/common/characteristic.tex
@@ -1,13 +1,13 @@
 
 {\actuality}
-Логическое программирование давно привлекает внимание исследователей тем, что оно предоставляет возможность не реализовывать конкретный алгоритм непосредственно, а вместо этого более-менее декларативно описывать условие решаемой задачи. Роль алгоритма в данном случае выполняет встроенная в систему логического программирования процедура поиска решения.
+Логическое программирование давно привлекает внимание исследователей тем, что оно предоставляет возможность не реализовывать конкретный алгоритм непосредственно, а вместо этого с некоторой степенью декларативности описывать условие решаемой задачи. Роль алгоритма в данном случае выполняет встроенная в систему логического программирования процедура поиска решения.
 
-Программа-запрос на логическом языке выражается в виде отношений (relations), а результат представляется в виде последовательности кортежей.
-Каждый кортеж в возможно пустой последовательности ответов должен принадлежать запрошенному отношению. Таким образом, роль n-местных функций в логическом программировании играют (n+1)-местные отношения. Эти отношения можно использовать в прямую сторону, конкретизировав аргументы и подставив вместо результата свободную переменную, т.е. как функции. Также возможно  запускать их "в обратную сторону", конкретизировав результат и, возможно, некоторые аргументы, по сути подбирая входные данные, на которых конкретный алгоритм, записанный на логическом языке программирования, выдаст ожидаемый результат.
+Программа-запрос на логическом языке выражается в виде отношений (relations), а результат представляется в виде последовательности кортежей, возможно пустой.
+Каждый кортеж в последовательности ответов должен принадлежать запрошенному отношению. Таким образом, роль n-местных функций в логическом программировании играют (n+1)-местные отношения. Эти отношения можно использовать в прямую сторону, конкретизировав аргументы и подставив вместо результата свободную переменную, т.е. как функции. Также является возможным запускать их ``в обратную сторону'', конкретизировав результат и некоторые аргументы, по сути подбирая входные данные, на которых конкретный алгоритм, записанный на логическом языке программирования, выдаст ожидаемый результат.
 
-Обладание свойством декларативности полезно для логических программ. Оно заключается в том, что программист не реализует непосредственно алгоритм как последовательность действий, от него требуется только корректное описание задачи на языке логического программирование. В декларативных описаниях разрешается описание свойств предметной области в произвольном порядке.
+Обладание свойством декларативности полезно для логических программ. Оно заключается в том, что программист не реализует непосредственно алгоритм как последовательность действий, от него требуется только корректное описание задачи на языке логического программирование. В декларативных описаниях программ результат не зависит от того как именно и в каком порядке описывается предметная область. Это снимает некоторый груз ответственности с программиста. 
 
-Исторически исследование логического программирования началось с изучения языка Prolog, который использует внутри себя  алгоритм поиска в глубину. Этот алгоритм, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветке дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее.
+Исторически исследование логического программирования началось с изучения языка Prolog, который использует внутри себя  алгоритм поиска в глубину. Этот алгоритм, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее. Таким образом программы не Prolog не являются декларативными в общем случае.
 
 Противоположный подход к поиску решения --- поиск в ширину --- является алгоритмом полного поиска, но работает недостаточно быстро, и поэтому почти не используется.
 
@@ -15,19 +15,19 @@
 
 Другим способом борьбы с неполнотой поиска является подход, применяемый в языке Datalog. Этот язык наследует синтаксис и процедуру поиска из Prolog, но некоторые программы и сочетания синтаксических конструкций считаются некорректными. Ограничения выбраны таким образом, что пространство поиска запросов на Datalog является конечным, и, следовательно, поиск в глубину является полным поиском на таких программах. 
 
-Язык Datalog нашел своё применения в различных предметных областях, в том числе компиляторы, запросы к базам данных, интернет-запросы и прочее\footnote{дописать подробнее со ссылками}.
+Язык Datalog нашел своё применения в различных предметных областях: компиляторы, запросы к базам данных, запросы к интернет-серверам и прочее\footnote{дописать подробнее со ссылками}.
 
 Третьим способом решения проблемы является использование языка программирования miniKanren, который является темой Ph.D. диссертации Уилла Бёрда (Will Byrd). Основных свойств miniKanren можно назвать два.
 
 Во-первых, в нём используется новый алгоритм поиска (interleaving search), являющийся чем-то средним между поисками в глубину и ширину. Как и поиск в ширину он является полным, и, следовательно, если на данный запрос существует ответ, то алгоритм поиска находит этот ответ за конечный, но, возможно, очень длительный, промежуток времени. При этом поиск в miniKanren является направленным в том же смысле, что и поиск в глубину. Программист может записывать программы так, что некоторые случаи (наиболее часто встречающиеся или конечные) будут рассмотрены перед случаями, в которых пространство поиска больше.
 
-Во-вторых, miniKanren не является непосредственно языком программирования, а семейством встраиваемых языков программирования. Его можно реализовывать как библиотеку в языках программирования общего назначения, и так как ядро языка не очень большое, то реализовать miniKanren относительно просто. Флагманской является реализация на различных диалектах Scheme, при это существуют \footnote{Ссылка на оф. сайт со списком реализаций} реализации miniKanren для других языков: функциональных и императивных, статически и динамически типизированных.
+Во-вторых, miniKanren не является непосредственно языком программирования, а семейством встраиваемых языков программирования. Его можно реализовывать как библиотеку в языках программирования общего назначения, и так как ядро языка не очень большое, то реализовать miniKanren относительно просто. Флагманской является реализация на различных диалектах Scheme, при этом существуют \footnote{Ссылка на оф. сайт со списком реализаций} реализации miniKanren для других языков: функциональных и императивных, статически и динамически типизированных.
 
-На данный момент сочетанием этих двух свойств обладают только языки семейства miniKanren, в своей Ph.D. диссертации Will Bird вводит термин \emph{реляционное программирование}, приравнивая его к программированию на miniKanren.
+На данный момент сочетанием этих двух свойств обладают только языки семейства miniKanren. В своей Ph.D. диссертации Will Bird вводит термин \emph{реляционное программирование}, приравнивая его к программированию на miniKanren.
 
 За счет использования полного поиска miniKanren обладает свойством декларативности в большей степени, чем Prolog, что позволяет содержательно использовать miniKanren для запуска реляционных запросов в обратную сторону. В 2012 году исследователи Will Byrd, Eric Hold и Daniel Fridman применили miniKanren для написания \emph{реляционного интерпретатора} (интерпретатора некоторого подмножества Scheme на miniKanren) и воспользовались декларативностью и запускаемостью интерпретатора в обратном направлении для синтеза квайнов (quines) для подмножества Scheme.
 
-Реализация miniKanren на строго типизированных языках сопряжена с некоторыми проблемами, так как непосредственное переписывание кода, спроектированного для динамического языка программирования, на строго типизированном языке программирования ведет к ошибкам типизации. Обычно, реализации miniKanren на строго типизированных языках предоставляют для использования встроенный язык программирования с поддержкой некоторого \emph{конечного и заготовленного заранее} набора типов данных. Другими словами программист не может использовать свои типы данных при написании реляционных запросов и вынужден преобразовывать свои данные в реляционный домен.
+Реализация miniKanren на строго типизированных языках сопряжена с некоторыми проблемами, так как непосредственное переписывание кода, спроектированного для динамического языка программирования, на строго типизированный языке ведет к ошибкам типизации. Обычно, реализации miniKanren на строго типизированных языках предоставляют для использования встроенный язык программирования с поддержкой некоторого \emph{конечного и заготовленного заранее} набора типов данных. Другими словами программист не может использовать свои типы данных при написании реляционных запросов и вынужден преобразовывать свои данные в реляционный домен.
 
 \paragraph{} Таким образом, для развития реляционного программирования в строго типизированных языках необходимо улучшать реализации miniKanren путём поддержки использования большего количества типов. 
 
@@ -115,13 +115,13 @@
   %% \item Проведён обзор существующих операционных моделей слабой памяти.
   %%       \todo{(пока не сделано)}
 %  \item Предложена операционная модель памяти C/С++11, для этой модели реализован интерпретатор.
-  \item Разработан и реализован OCanren в виде библиотеки: реляционного, предметно-ориентированного, встраиваемого (в OCaml) языка программирования, который принадлежит семейству языков на основе miniKanren.
+  \item Разработка и реализация OCanren в виде библиотеки: предметно-ориентированного, встраиваемого (в OCaml) языка реляционного программирования.
   \item Разработка и реализация библиотеки обобщенного программирования Generic Transformers для языка OCaml, которая упрощает обобщенное программирование в OCaml в общем, а в частности облегчает написание реляционных запросов с помощью OCanren.
   \item Применение реляционного программирования для компилятора функционального языка OCaml (планируется). 
   \begin{itemize}
-  \item   Реализация реляционного алгоритма компиляции языковой конструкции “сопоставление с образцом” (pattern matching).
-  \item   Реализация компиляции расширений конструкции сопоставления с образцом.
-  \item   Реализация выделения регистров с помощью решения паззлов.
+  \item Применение реляционного алгоритма поиска для компиляции языковой конструкции “сопоставление с образцом” (pattern matching) для языка OCaml, а исследование трудоемкости расширения процедуры компиляции при расширении конструкции сопоставления с образцом.
+  \item Добавление расширений компиляции расширений конструкции сопоставления с образцом.
+  \item Реализация выделения регистров с помощью решения пазлов (puzzle solving).
   \end{itemize}
 
 
